<resources>
    <string name="app_name">Qpid Dating</string>
    <string name="app_description">Discover love and beauties</string>
    <string name="app_id">851829941571736</string>
    <string name="title_activity_quick_match_main">QuickMatchMainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_quick_match">QuickMatchActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_by_email">RegisterByEmailActivity</string>
    <string name="title_activity_register_password">RegisterPasswordActivity</string>
    <string name="title_activity_register_by_facebook">RegisterByFacebookActivity</string>
    <string name="title_activity_register_forget_password">RegisterResetPasswordActivity</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="title_activity_profile">My Profile</string>
	<string name="title_activity_profile_detail">My profile details</string>
	<string name="title_activity_profile_detail_selfintro">MyProfileDetailSelfIntroActivity</string>
	<string name="title_activity_profile_detail_interest">MyProfileDetailInterestActivity</string>
	<string name="title_activity_match_criteria">MyProfileMatchCriteriaActivity</string>
	<string name="title_activity_profile_photo">MyProfilePhotoActivity</string>
	<string name="title_activity_profile_phone_verify">MyProfilePhoneVerifyActivity</string>
	<string name="title_activity_profile_phone_verify_mobile">MyProfilePhoneVerifyMobileActivity</string>
	<string name="title_activity_profile_phone_verify_landline">MyProfilePhoneVerifyLandlineActivity</string>
	<string name="title_activity_profile_phone_verify_mobile_code">MyProfilePhoneVerifyMobileCodeActivity</string>
	<string name="title_activity_profile_slect_country">MyProfileSelectCountryActivity</string>
	<string name="title_activity_profile_change_password">MyProfileChangePasswordActivity</string>
	<string name="title_activity_setting">SettingActivity</string>
	<string name="title_company_name">Qpid Network Dating</string>
	<string name="title_select_member_site">Select a member site</string>
	<string name="myprofile_free_chat">Free Chat Vouchers can be used to start free chat with all newly introduced ladies.</string>
	<string name="myprofile_sure_clean_cache">Are you sure you wish to clean the app cache?</string>
	<string name="title_activity_forget_password_successful">RegisterResetPasswordSuccessfulAcitiviy</string>
	<string name="find_matches">Find Matches</string>
	<string name="login_x_ladies_are_online_now">%s ladies are online now.</string>
	<string name="login_email_or_id">Login email or ID</string>
	<string name="login_password">Password</string>
	<string name="logn_secure_code">Secure code</string>
	<string name="login_connect_with_facebook">Connect with Facebook</string>
	<string name="login">Login</string>
	<string name="website_change_notify">Do you want to change to %s ?</string>
	<string name="search_criterial">Search Criteria</string>
	<string name="search_by_id">Search by ID</string>
	<string name="ladys_id">Lady\' ID</string>
	<string name="Lady_ID">Lady ID</string>
	<string name="no_online_lady_at_the_moment">No online ladies at the moment.</string>
	<string name="no_ladies_available_for_call_at_the_moment">No ladies available for calls at the moment.</string>
	<string name="error_msg">Trouble loading lady profiles. Please check your internet connection and try again.</string>
	<string name="no_ladies_which_age_between_x_and_x_are_online">No ladies whoes age between age1 and age2 are online at the moment.</string>
	<string name="no_ladies_found_whoes_age_between_x_and_x">No ladies found whoes age between age1 and age2.</string>
	<string name="your_favorite_list_is_empty">Your favorite list is empty.</string>
	<string name="profile_id_x_does_not_exist">Profile %s doesn\'t exist.</string>
	<string name="get_qpid_credits_to_continue">Get Qpid Credits to continue</string>
	<string name="more_options">More options</string>
	<string name="view_profile">View profile</string>
	<string name="Crash_report_detected">Crash report detected</string>
	<string name="Do_you_want_report_an_incident_to_help_us_for_app_improvement">Do you want report an incident to help us for app improvement?</string>
	<string name="Remember_my_choise">Remember my choise</string>
	<string name="switch_site_tips">Switch to our family sites</string>
    <string name="menu_credit">Credit Balance</string>
    <string name="menu_quickmatch">Quick Match</string>
    <string name="menu_mailbox">Mail Box</string>
    <string name="menu_lovecalls">Love Call</string>
    <string name="menu_admirers">My Admirers</string>
    <string name="menu_contacts">My Contacts</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_helps">Helps</string>
    <string name="menu_changesite">Tap to change</string>
    <string name="menu_current_site">You\'r on %s</string>
    <string name="menu_service">SERVICE</string>
    <string name="menu_tap_to_change">Tap to change</string>
    <string name="lady_category_online">Online Ladies</string>
    <string name="lady_category_with_video">With Video</string>
    <string name="lady_category_with_call">Available for Calls</string>
    <string name="lady_category_newest">Newly Joined</string>
    <string name="lovecall_schedule_time">Time: %s</string>
    <string name="lovecall_request_time">Wants your call on %s</string>
    <string name="lovecall_request_tips">Tap to make a schedule</string>
    <string name="lovecall_schedule_details_title">Love Call Schedule</string>
    <string name="lovecall_request_details_title">Love Call Request</string>
    <string name="lovecall_schedule_point">&#183;</string>
    <string name="lovecall_schedule_detail_desc">You have a call scheduled with</string>
    <string name="lovecall_schedule_details_subtitle">Schedule Details</string>
    <string name="lovecall_request_details_subtitle">Request Details</string>
    <string name="lovecall_details_date">Date</string>
    <string name="lovecall_details_time">Time</string>
    <string name="lovecall_details_call_period">Calling period</string>
    <string name="lovecall_details_callid">Call ID</string>
    <string name="lovecall_details_translate_tips">This is a 3-way call in which a call interpreter will be involved.</string>
    <string name="lovecall_details_call_notwork">Above button not working? tap here.</string>
    <string name="lovecall_details_decline_tips">If you believe this is not an accurate call schedule or you want to decline this request, please tap below button.</string>
    <string name="lovecall_details_btn_call">Call Now</string>
    <string name="lovecall_details_btn_confirm">Confirm this schedule</string>
    <string name="lovecall_details_btn_decline">Decline</string>
    <string name="lovecall_details_message">Your message to lady</string>
    <string name="lovecall_confirm_tips">1 credit will be charged for confirming this schedule.</string>
    <string name="lovecall_decline_tips">Are you sure you want to decline this call request?</string>
   	<string name="lovecall_confirm_fail_tips">Trouble confirming this call request.</string>
    <string name="lovecall_decline_fail_tips">Trouble declining this call request.</string>
    <string name="lovecall_terms_title">Call service fee note</string>
    <string name="lovecall_terms_detail">1 - Interpretation: Free\n2 - Call: 1 Qpid Credit per min (starts when connected to lady)\n3 - International calling fees (determined by your Cellular Service Provider)</string>
    <string name="lovecall_no_sim_tips">Don\'t have a SIM card?</string>
    <string name="lovecall_call_now">Call Now</string>
    <string name="love_call_dont_tell_again">Don\'t tell me again and call</string>
    <string name="lovecall_instruction">1) Dial into our call center at %s.\n2) Enter your Call ID as instructed.\n3) Your and the lady will be connected shortly </string>
    <string name="lovecall_active_after_x">Call active after %s</string>
    <string name="lovecall_mail_schedule_title">Schedule a call</string>
    <string name="lovecall_mail_schedule_tips_terms_number1">1)</string>
    <string name="lovecall_mail_schedule_tips_terms_number2">2)</string>
    <string name="lovecall_mail_schedule_tips_terms_number3">3)</string>
    <string name="lovecall_mail_schedule_tips_title">Note:</string>
    <string name="lovecall_mail_schedule_tips_terms1">1 credit will be charged to send this schedule.</string>
    <string name="lovecall_mail_schedule_tips_terms2">Important, once the schedule is accepted, the lady will send you back a calling request which you have to make a confirmation to make the call valid. You can check this requests under the "Main Menu > Love Call > Request" section (Open).</string>
    <string name="lovecall_mail_schedule_tips_terms3">You can check you confirmed call requests on the "Main Menu > Love Call > Scheduled" section.</string>
    <string name="lovecall_mail_schedule_dailog_country_title">Your Country</string>
    <string name="lovecall_mail_schedule_dialog_city_title">Your City</string>
    <string name="lovecall_mail_schedule_body_title">Love Call Schedule:\n\n</string>
    <string name="lovecall_mail_schedule_body_timezone">Timezone: %s\n</string>
    <string name="lovecall_mail_schedule_body_datetime">Date and Time: %s \n\n</string>
    <string name="lovecall_mail_schedule_body_body">-----------------------------------------------\n\nHi lady,\n\n%s</string>
    <string name="lovecall_mail_schedule_makecall_error_tips">%s is not available for instant call now. Would you like to send her a call request?</string>
    <string name="lovecall_mail_schedule_send_fail">Failed to send your call request, would you like to try again?</string>
    <string name="lovecall_mail_schedule_edit_tips">When do you want to call her</string>
    <string name="emf_send">Send</string>
    <string name="emf_save_draft_tips">If you choose save, draft will be reloaded next time you write a mail to this lady.</string>
    <string name="emf_save_draft">Save Draft</string>
    <string name="emf_delete_draft">Delete Draft</string>
    <string name="emf_credit_tips_title">Oops! you don\'t have suffient credits to send this mail.</string>
    <string name="emf_credit_tips">Credits balance: </string>
    <string name="emf_quick_reply">Quick Reply</string>
    <string name="emf_quick_reply_use_credit">1 credit will be charged to send the reply.</string>
    <string name="emf_quick_reply_learn_more"><u>Learn more.</u></string>
    <string name="emf_quick_reply_edit_hint">Type your message here</string>
    <string name="emf_credit_button_remove">Remove some attachement</string>
    <string name="emf_credit_button_add">Add more credits</string>
    <string name="contact_label_online_only">Online only</string>
    <string name="contact_label_offline_only">Offline only</string>
    <string name="contact_label_my_favorites">My favorites</string>
    <string name="contact_label_with_videos">With videos</string>
    <string name="common_btn_cancel">Cancel</string>
	<string name="contact_empty_how">How to add a contact here?</string>
	<string name="contact_empty_service">• Contact them via any of our service.</string>
	<string name="contact_empty_favorite">• Or  add them as your favorite by tap on</string>
	<string name="contact_empty_favorite_end">the favorite button</string>
	<string name="contact_empty_adver_mail">Mail</string>
	<string name="contact_empty_adver_chat">Chat</string>
	<string name="contact_empty_adver_call">Call</string>
	<string name="Change">Change</string>
	<string name="Your_current_password_is_incorrect">Your current password is incorrect.</string>
	<string name="Your_current_password">Your current password</string>
	<string name="New_password">New password</string>
	<string name="Confirm_password">Confirm password</string>
</resources>