<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
            xmlns:button="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true">
    
    <RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
   		android:layout_height="match_parent"
    	android:orientation="vertical"        
        android:padding="24dp"
        android:layout_marginTop="@dimen/actionbar_height">
        <com.qpidnetwork.view.MaterialTextField 
            android:id="@+id/editTextCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"    
            android:inputType="textPassword"
            android:hint="@string/Your_current_password"       
            />  
        <com.qpidnetwork.view.MaterialTextField 
            android:id="@+id/editTextNewPassword"            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"    
            android:inputType="textPassword"
            android:hint="@string/New_password"       
            />  
        <com.qpidnetwork.view.MaterialTextField 
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"    
            android:inputType="textPassword"
            android:hint="@string/Confirm_password"       
            />  

        
                <com.qpidnetwork.view.ButtonRaised
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        button:background="@color/blue_color"
        button:elevation="2dp"
        button:title="@string/Change"
        button:title_color="@color/white"
        button:touch_feedback="@drawable/touch_feedback_holo_dark" 
        android:onClick="onClickChange"/>
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/textViewTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/actionbar_height"
        android:background="@color/red_light"
        android:text="@string/Your_current_password_is_incorrect"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="gone"/>    
        
    
    <com.qpidnetwork.view.MaterialAppBar
        android:layout_height="@dimen/actionbar_height"
        android:layout_width="match_parent"
        android:id="@+id/appbar"/>
</RelativeLayout>
</RelativeLayout>
