<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:focusable="true"
        android:focusableInTouchMode="true"
                    android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"
            android:background="@color/tiny_grey_solid">

        <RelativeLayout
            android:id="@+id/llQuickReply"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvQuickReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/emf_quick_reply"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivQuickReply"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/touch_feedback_holo_light_circle"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_expand_full_grey_24dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llQuickReply"
            android:background="@color/white"
            android:gravity="left|top"
            android:hint="@string/emf_quick_reply_edit_hint"
            android:minLines="6"
            android:padding="8dp"
            android:textColorHint="@color/text_color_grey"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llBonusPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etReply"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvBonusPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/emf_quick_reply_use_credit"
                android:textColor="@color/text_color_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLearnMore"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/emf_quick_reply_learn_more"
                android:textColor="@color/text_color_grey"
                android:visibility="gone" 
                android:textSize="14sp"/>
        </LinearLayout>

        <com.qpidnetwork.view.ButtonRaised
            android:id="@+id/btnSend"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_below="@+id/llBonusPoint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            button:background="@color/blue_color"
            button:elevation="1dp"
            button:title="@string/emf_send"
            button:title_color="@color/white"
            button:touch_feedback="@drawable/touch_feedback_holo_dark" />
    </RelativeLayout>

</merge>