<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    
            <Button
            android:id="@+id/buttonOnlineLady"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:text="@string/lady_category_online"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:background="@drawable/touch_feedback_holo_light"
            android:paddingLeft="32dp"/>
            
            <View android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/listview_divider_grey"/>
            
            
                        <Button
            android:id="@+id/buttonVideo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:text="@string/lady_category_with_video"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:background="@drawable/touch_feedback_holo_light"
            android:paddingLeft="32dp"/>
            
            <View android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/listview_divider_grey"/>
            

            
                                    <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:text="@string/lady_category_with_call"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:background="@drawable/touch_feedback_holo_light"
            android:paddingLeft="32dp"/>
            
            <View android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/listview_divider_grey"/>
                    

                                                       <Button
            android:id="@+id/buttonNewest"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:text="@string/lady_category_newest"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:background="@drawable/touch_feedback_holo_light"
            android:paddingLeft="32dp"/>
            

        
        

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/rectangle_grey_shawdow" />

</LinearLayout>